# csync2

./: .gitignore  AUTHORS  AUTHORS.adoc  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.adoc  TODO  action.c  autogen.sh  cfgfile_parser.y  cfgfile_scanner.l  check.c  checktxt.c  config_parser.y  config_scanner.l  configure.ac  conn.c  copycheck.sh  csync2-compare  csync2-postgres.sql  csync2.1  csync2.c  csync2.cfg  csync2.conf  csync2.h  csync2.socket  csync2.spec  csync2.xinetd  csync2@.service  csync2_locheck.sh  daemon.c  db.c  db_api.c  db_api.h  db_mysql.c  db_mysql.h  (+15 more)
contrib/: csync2id.pl
cygwin/: buildit.sh  cs2_hintd_win32.cs  cs2hintd.c  cs2hintd_fseh.cs  cs2monitor.c  monitor.c  perftest.pl  readme_pkg.txt
debian/: README.Debian  changelog  control  copyright  cron.d  dirs  docs  files  overrides  postinst  prerm  rules
doc/: csync2-quickstart.adoc  csync2.adoc  csync2_paper.tex
tests/: include.sh
tests/etc/: csync2.cfg  csync2.key_demo
tests/t/: 0000.basic.t  0001.missing-leading-directories.t  0002.long-and-strange-file-names.t  0003.case-compare.t  0004.diff.t
